sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: '(' expected but identifier found.
		if getValeur(j)<v {
                   ^AlgInsertionSort:14: error: illegal start of simple expression
	}
        ^