sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() { 
var v:Int=0
for ( i<- 1 to getNombreValeurs-1) {
	v=getValeur(i)
	for (j <- i-1 to 0 by -1) {
		if getValeur(j)<v {
			setValeur(j+1,getValeur(j))
		} else {
			setValeur(j+1,v)
			return
		}
	}
}
}
